fix(user): hard-delete users with cascading dependencies
